codespell fixes in web interface templates

--- a/python/fatcat_web/templates/container_create.html
+++ b/python/fatcat_web/templates/container_create.html
@@ -18,7 +18,7 @@ book series, or a blog. Not all publications are in a container.
   <input class="ui primary submit button" type="submit" value="Create Container!">
   <p>
   <i>New container entity will be part of the current editgroup, which needs to be
-  submited and approved before the entity will formally be included in the
+  submitted and approved before the entity will formally be included in the
   catalog.</i>
 </form>
 </div>
