--- a/python/fatcat_web/templates/container_edit.html
+++ b/python/fatcat_web/templates/container_edit.html
@@ -70,7 +70,7 @@
   <br><br>
   <input class="ui primary submit button" type="submit" value="Update Container!">
   <p>
-  <i>Edit will be part of the current editgroup, which needs to be submited and
+  <i>Edit will be part of the current editgroup, which needs to be submitted and
   approved before the change is included in the catalog.</i>
 </form>
 </div>
