--- a/python/fatcat_web/templates/entity_create_toml.html
+++ b/python/fatcat_web/templates/entity_create_toml.html
@@ -12,7 +12,7 @@
   <input class="ui primary submit button" type="submit" value="Create {{ entity_type }}!">
   <p>
   <i>New {{ entity_type }} entity will be part of the current editgroup, which
-  needs to be submited and approved before the entity will formally be included
+  needs to be submitted and approved before the entity will formally be included
   in the catalog.</i>
 </form>
 </div>
