--- a/python/fatcat_web/templates/entity_delete.html
+++ b/python/fatcat_web/templates/entity_delete.html
@@ -31,7 +31,7 @@
   <br><br>
   <input class="ui primary submit button" type="submit" value="Update Release!">
   <p>
-  <i>Deletion will be part of the current editgroup, which needs to be submited and
+  <i>Deletion will be part of the current editgroup, which needs to be submitted and
   approved before the change is included in the catalog.</i>
 </form>
 </div>
