--- a/python/fatcat_web/templates/file_create.html
+++ b/python/fatcat_web/templates/file_create.html
@@ -14,7 +14,7 @@
   <input class="ui primary submit button" type="submit" value="Create File!">
   <p>
   <i>New file entity will be part of the current editgroup, which needs to be
-  submited and approved before the entity will formally be included in the
+  submitted and approved before the entity will formally be included in the
   catalog.</i>
 </form>
 </div>
