--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -240,7 +240,7 @@
         <br><a href="/file/lookup">Other Hashes</a>
         </form>
 <tr><td><b>File Set</b>
-        <br>datasets, suplementary materials
+        <br>datasets, supplementary materials
     <td><a href="/fileset/create">Create</a>
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
     <td><a href="/fileset/ho376wmdanckpp66iwfs7g22ne">Dataset</a>
