--- a/python/fatcat_web/templates/release_lookup.html
+++ b/python/fatcat_web/templates/release_lookup.html
@@ -49,7 +49,7 @@ you don't know the version, you can append "v1" to get the first version.
 
 <h2>DOI</h2>
 <p><a href="https://en.wikipedia.org/wiki/Digital_object_identifier">
-Digital object identifer</a>: "it's not an identifier for a digital object,
+Digital object identifier</a>: "it's not an identifier for a digital object,
 it's a digital identifier for an object". Except they are pretty much all
 digital objects. Fatcat doesn't include all DOIs (eg, for granular components
 or TV shows), but it should for all complete research publications. DOIs are
