--- a/python/fatcat_web/templates/wikipedia_view_fuzzy_refs.html
+++ b/python/fatcat_web/templates/wikipedia_view_fuzzy_refs.html
@@ -14,7 +14,7 @@
   <p>This page lists references to a wikipedia article, from other works (eg, journal articles).
 {% elif direction == "out" %}
   <h3>References</h3>
-  <i>Refernces from wikipedia article to other entities.</i>
+  <i>References from wikipedia article to other entities.</i>
 {% endif %}
 
 {{ refs_macros.refs_table(hits, direction) }}
