--- a/python/fatcat_web/templates/release_edit.html
+++ b/python/fatcat_web/templates/release_edit.html
@@ -105,7 +105,7 @@
   <br>
 
   <br>
-  <h3 class="ui dividing header">Identifers</h3>
+  <h3 class="ui dividing header">Identifiers</h3>
   <br>
   {{ edit_macros.form_field_inline(form.doi) }}
   {{ edit_macros.form_field_inline(form.wikidata_qid) }}
@@ -148,7 +148,7 @@
   <br><br>
   <input class="ui primary submit button" type="submit" value="Update Release!">
   <p>
-  <i>Edit will be part of the current editgroup, which needs to be submited and
+  <i>Edit will be part of the current editgroup, which needs to be submitted and
   approved before the change is included in the catalog.</i>
 </form>
 </div>
