web: switch 'perpetual access' terminology to 'preservation'

--- a/python/fatcat_web/templates/container_view_coverage.html
+++ b/python/fatcat_web/templates/container_view_coverage.html
@@ -34,7 +34,7 @@
 
 {% if container._stats.total >= 1 %}
   <br><br>
-  <h2>Perpetual Access Coverage by Year</h2>
+  <h2>Preservation Coverage by Year</h2>
 
   <figure style="margin: 0 0 0 0;">
     <embed type="image/svg+xml" src="/container/{{ container.ident }}/preservation_by_year.svg" />
@@ -45,7 +45,7 @@
   </div>
 
   <br><br>
-  <h2>Perpetual Access Coverage by Volume</h2>
+  <h2>Preservation Coverage by Volume</h2>
 
   <figure style="margin: 0 0 0 0;">
     <embed type="image/svg+xml" src="/container/{{ container.ident }}/preservation_by_volume.svg" />
@@ -56,7 +56,7 @@
   </div>
 
   <br><br>
-  <h2>Perpetual Access Coverage by Release Type</h2>
+  <h2>Preservation Coverage by Release Type</h2>
   <table class="ui table">
     <thead>
       <tr>
