editing: correct button/form names

--- a/python/fatcat_web/templates/entity_edit_toml.html
+++ b/python/fatcat_web/templates/entity_edit_toml.html
@@ -31,7 +31,7 @@
 
 {% block edit_form_suffix %}
   <br><br>
-  <input class="ui primary submit button" type="submit" value="Update Release!">
+  <input class="ui primary submit button" type="submit" value="Update Entity!">
   <p>
   <i>Edit will be part of the current editgroup, which needs to be submitted and
   approved before the change is included in the catalog.</i>
