--- a/python/fatcat_web/templates/entity_delete.html
+++ b/python/fatcat_web/templates/entity_delete.html
@@ -29,7 +29,7 @@
 
 {% block edit_form_suffix %}
   <br><br>
-  <input class="ui primary submit button" type="submit" value="Update Release!">
+  <input class="ui primary submit button" type="submit" value="Delete Entity!">
   <p>
   <i>Deletion will be part of the current editgroup, which needs to be submitted and
   approved before the change is included in the catalog.</i>
