--- a/python/fatcat_web/templates/entity_base.html
+++ b/python/fatcat_web/templates/entity_base.html
@@ -83,6 +83,7 @@
             {{ entity_tab("overview", "Overview", "") }}
             {% if entity_type == "container" and entity.state == 'active' and not editgroup %}
               {{ entity_tab("coverage", "Preservation", "/coverage") }}
+              {{ entity_tab("search", "Search", "/search") }}
             {% elif entity_type == "release" and entity.state != 'deleted' %}
               {{ entity_tab("contribs", "Authors", "/contribs", entity._authors|count ) }}
               {% if  entity.state == 'active' %}
