--- a/python/fatcat_web/templates/entity_view_metadata.html
+++ b/python/fatcat_web/templates/entity_view_metadata.html
@@ -5,7 +5,15 @@
 {% block entity_main %}
 
 <h3>Entity Metadata (schema)</h3>
-{{ entity_macros.extra_metadata(entity._metadata) }}
+{% if entity._metadata %}
+  {{ entity_macros.extra_metadata(entity._metadata) }}
+{% else %}
+  <table class="ui definition single line fixed compact small unstackable table">
+    <tbody>
+      <tr><td class="center aligned"><i>No specific metadata for this entity</i></td>
+    </tbody>
+  </table>
+{% endif %}
 <div style="float: right;">
   <a href="{{ config.FATCAT_PUBLIC_API_HOST }}/{{ entity_type }}/{{ entity.ident }}">As JSON via API</a>
 </div>
